# test-ci

./: CMakeLists.txt  CopyDeps.bat.in  main.cpp  png.c  repositories-cheker.py
.github/: email-checker.py
.github/workflows/: ci.yml
cmake/: DeployQt.cmake  FindTAGLIB.cmake
files/overlays/: repositories.xml
